# messenger

./: .env.example  README.md  cron_clear_collections.py  pyproject.toml
mongodb_backup/: chats.bson  chats.metadata.json  chats_users.bson  chats_users.metadata.json  messages.bson  messages.metadata.json
optimized/src/static/css/: index-oCcwLZ8q.css
optimized/src/static/js/: comment_input_stylization.js  main.js
optimized/templates/: chat.html  main.html  messages.html
src/: main.py  reload.sh  run_with_reload.sh  run_with_reload_prod.sh
src/static/css/: appDialogsManager-6QNcK96s.css  index-oCcwLZ8q.css
src/static/js/: comment_input_stylization.js  main.js
templates/: chat.html  main.html  messages.html
